# DexEncryption

./: build.gradle  dex.jks  settings.gradle
app/: build.gradle
app/src/androidTest/java/kim/hsl/dex/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/kim/hsl/dex/: MainActivity.kt  MyApplication.java  MyBroadCastReciver.java  MyProvider.java  MyService.java
app/src/main/res/values/: strings.xml
app/src/test/java/kim/hsl/dex/: ExampleUnitTest.kt
app2/: build.gradle
app2/src/androidTest/java/kim/hsl/app2/: ExampleInstrumentedTest.kt
app2/src/main/: AndroidManifest.xml
app2/src/main/java/kim/hsl/app2/: MainActivity.kt
app2/src/main/res/values/: themes.xml
app2/src/main/res/values-night/: themes.xml
app2/src/test/java/kim/hsl/app2/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
multiple-dex-core/: CMakeLists.txt  build.gradle
multiple-dex-core/src/androidTest/java/kim/hsl/multipledex/: ExampleInstrumentedTest.kt
multiple-dex-core/src/main/: AndroidManifest.xml
multiple-dex-core/src/main/cpp/: CMakeLists.txt  logging_macros.h  native-lib.c  native-lib.cpp  native-lib2.c
multiple-dex-core/src/main/java/kim/hsl/multipledex/: OpenSSL.java  OpenSSL.kt  ProxyApplication.java  ProxyApplication.kt  ReflexUtils.java  ReflexUtils.kt  Utils.java  Zip.java  ZipUtils.java  ZipUtils.kt
multiple-dex-core/src/test/java/kim/hsl/multipledex/: ExampleUnitTest.kt
multiple-dex-core2/: CMakeLists.txt  build.gradle
multiple-dex-core2/src/androidTest/java/kim/hsl/multiple_dex_core2/: ExampleInstrumentedTest.java
multiple-dex-core2/src/main/: AndroidManifest.xml
multiple-dex-core2/src/main/cpp/: native-lib.c
multiple-dex-core2/src/main/cpp/include/openssl/: opensslconf.h
multiple-dex-core2/src/main/java/kim/hsl/multiple_dex_core2/: ProxyApplication.java  Utils.java  Zip.java
multiple-dex-core2/src/test/java/kim/hsl/multiple_dex_core2/: ExampleUnitTest.java
multiple-dex-core3/: build.gradle
multiple-dex-core3/src/androidTest/java/kim/hsl/core3/: ExampleInstrumentedTest.java
multiple-dex-core3/src/main/: AndroidManifest.xml
mylibrary/: build.gradle
mylibrary/src/main/: AndroidManifest.xml
proxy-guard-core/: build.gradle
proxy-guard-core/src/main/: AndroidManifest.xml
proxy-guard-core/src/main/cpp/: native-lib.c
proxy-guard-core/src/main/res/values/: strings.xml
proxy-guard-tools/: proxy.jks
proxy-guard-tools/temp/: AndroidManifest.xml
(+17 files in other folders)
